# GitSvnSync

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  config.example.toml  target
.claude/: launch.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issues/: ISSUES_PLAN.md  create-all-issues.sh
.github/workflows/: ci.yml  e2e.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/personal/: conflicts.rs  daemon_ctl.rs  doctor.rs  import.rs  init.rs  log.rs  mod.rs  pr_log.rs  status.rs  style.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  crypto.rs  errors.rs  file_policy.rs  import.rs  ldap_auth.rs  lfs.rs  lib.rs  models.rs  personal_config.rs  sync_engine.rs
crates/core/src/conflict/: detector.rs  merger.rs  mod.rs  resolver.rs
crates/core/src/db/: mod.rs  queries.rs  schema.rs
crates/core/src/git/: client.rs  github.rs  mod.rs  remote_url.rs
crates/core/src/identity/: ldap.rs  mapper.rs  mapping_file.rs  mod.rs
crates/core/src/notify/: email.rs  mod.rs  slack.rs
crates/core/src/svn/: client.rs  mod.rs  parser.rs
crates/core/tests/: team_mode_e2e.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: main.rs  scheduler.rs  signals.rs
crates/personal/: Cargo.toml
crates/personal/src/: commit_format.rs  daemon.rs  engine.rs  git_to_svn.rs  initial_import.rs  lib.rs  main.rs  pr_monitor.rs  scheduler.rs  signals.rs  svn_to_git.rs
crates/personal/tests/: integration.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs  ws.rs
crates/web/src/api/: audit.rs  auth.rs  config.rs  conflicts.rs  mod.rs  repos.rs  seed.rs  setup.rs  status.rs  sync_history.rs  users.rs  webhooks.rs
crates/web/tests/: server_freeze.rs
docs/: architecture.md  configuration.md  conflict-resolution.md  controlled-validation-guide.md  deployment.md  enterprise-soak-runbook.md  getting-started.md  ghe-live-validation-guide.md  ghe-svn-import-guide.md  identity-mapping.md  troubleshooting.md  validation-report.md
docs/personal-branch/: README.md  architecture.md  configuration.md  faq.md  quickstart.md  troubleshooting.md  workflows.md
scripts/: controlled-validation.sh  deploy.sh  enterprise-soak.sh  ghe-live-validation.sh  gitsvnsync.service  install.sh  large-file-validation.sh  reposync.service  test-s7-provenance.sh
scripts/sandbox/: comprehensive-e2e.sh  create-large-sandbox.sh  fix-watermarks-and-test.sh  populate-svn.sh  quick-bidi-test.sh  test-bidirectional.sh
tests/: Dockerfile.svn-server  docker-compose.yml  e2e_api_test.sh  svn-apache.conf
tests/fixtures/: authors.toml  test-config.toml
tests/scripts/: seed-git-repo.sh  seed-svn-repo.sh  setup-test-env.sh  simulate-conflicts.sh
web-ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  api.ts  index.css  main.tsx  uiforge-overrides.css
web-ui/src/components/: ActivityEventRenderers.tsx  Badges.tsx  ConfirmModal.tsx  DiffViewer.tsx  ImportPhaseGraphic.tsx  ImportProgressCard.tsx  Layout.tsx  LoadingSpinner.tsx  Logo.tsx  ServerMonitor.tsx  SyncStatus.tsx
web-ui/src/pages/: AdminLdap.tsx  AdminUsers.tsx  AuditLog.tsx  Config.tsx  ConflictDetail.tsx  Conflicts.tsx  Dashboard.tsx  Documentation.tsx  Login.tsx  RepoDetail.tsx  Repositories.tsx  SetupWizard.tsx  UserSettings.tsx
web-ui/src/utils/: activityAdapter.ts  auth.ts  time.ts
