[workspace]
members = [
    "crates/core",
    "crates/daemon",
    "crates/web",
    "crates/cli",
    "crates/personal",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/chriscase/GitSvnSync"
description = "Bidirectional SVN ↔ Git synchronization bridge"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Git
git2 = "0.19"

# Web
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Diff/merge
diffy = "0.4"

# Notifications
lettre = { version = "0.11", features = ["tokio1-native-tls"] }

# Config
clap = { version = "4", features = ["derive"] }

# Crypto
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Interactive CLI
dialoguer = "0.11"
indicatif = "0.17"
console = "0.15"
comfy-table = "7"

# Platform directories
dirs = "5"

# Regex (lightweight, no-std-compatible)
regex-lite = "0.1"

# Testing
tempfile = "3"
