[package]
name = "reposync-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RepoSync command-line management tool"

[[bin]]
name = "reposync"
path = "src/main.rs"

[dependencies]
reposync-core = { path = "../core" }
reposync-personal = { path = "../personal" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
comfy-table = { workspace = true }
