[package]
name = "gitsvnsync-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for GitSvnSync bidirectional SVN/Git synchronization"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
rusqlite = { workspace = true }
git2 = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
diffy = { workspace = true }
lettre = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
regex-lite = { workspace = true }
glob-match = { workspace = true }
bcrypt = { workspace = true }
ldap3 = { workspace = true }
native-tls = "0.2"
aes-gcm = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
