[package]
name = "reposync-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RepoSync synchronization daemon"

[[bin]]
name = "reposync-daemon"
path = "src/main.rs"

[dependencies]
reposync-core = { path = "../core" }
reposync-web = { path = "../web" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
