[package]
name = "gitsvnsync-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GitSvnSync web server and API"

[dependencies]
gitsvnsync-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
