[package]
name = "reposync-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RepoSync web server and API"

[dependencies]
reposync-core = { path = "../core" }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rusqlite = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
subtle = { workspace = true }


[dev-dependencies]
tokio = { workspace = true }
tempfile = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
git2 = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
